--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   shimmer: ^3.0.0
   flutter_animate: ^4.5.2
   font_awesome_flutter: ^10.7.0
+  shamsi_date: ^1.1.1
+  persian_datetime_picker: ^3.2.0
 
 dev_dependencies:
   flutter_test:
