--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,13 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   shamsi_date: ^1.1.1
   persian_datetime_picker: ^3.2.0
+  file_picker: ^10.3.8
+  emoji_picker_flutter: ^4.4.0
+  record: ^6.1.2
+  audioplayers: ^6.5.1
+  permission_handler: ^12.0.1
+  text_scroll: ^0.2.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
