--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.41.0+1.41.0
+version: 1.46.0+1.46.0
 
 environment:
   sdk: ^3.10.4
@@ -59,6 +59,7 @@ dependencies:
   text_scroll: ^0.2.1
   uuid: ^4.5.1
   lottie: ^3.1.2
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
