--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.77.9+1.77.9
+version: 1.78.0+1.78.0
 
 environment:
   sdk: ^3.10.4
@@ -96,6 +96,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/DuckEmoji/
+    - assets/images/TheSoul/
 
   fonts:
     - family: IRANSansX
