--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = flow_fz
+PRODUCT_NAME = Flow
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.flow.fz.flowFz
+PRODUCT_BUNDLE_IDENTIFIER = ir.rudev.flow
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.flow.fz. All rights reserved.
