--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flow_fz
+name: flow
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.96.63+1.96.63
+version: 1.96.66+1.96.66
 
 environment:
   sdk: ^3.10.4
@@ -66,6 +66,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.14.4
+  flutter_native_splash: ^2.4.4
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -78,6 +79,13 @@ flutter_launcher_icons:
     image_path: "assets/images/flow-prm.png"
     background_color: "#000000"
     theme_color: "#000000"
+
+flutter_native_splash:
+  color: "#000000"
+  image: "assets/images/flow-prm.png"
+  android_12:
+    image: "assets/images/flow-prm.png"
+    color: "#000000"
 
 # dependency_overrides removed
 
