--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flow_fz",
-    "short_name": "flow_fz",
+    "name": "Flow",
+    "short_name": "Flow",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#000000",
