--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.flow.fz" "\0"
-            VALUE "FileDescription", "flow_fz" "\0"
+            VALUE "FileDescription", "Flow" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flow_fz" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.flow.fz. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flow_fz.exe" "\0"
-            VALUE "ProductName", "flow_fz" "\0"
+            VALUE "InternalName", "Flow" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 ir.rudev. All rights reserved." "\0"
+            VALUE "OriginalFilename", "flow.exe" "\0"
+            VALUE "ProductName", "Flow" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
