--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.00.06+2.00.06
+version: 2.00.07+2.00.07
 
 environment:
   sdk: ^3.10.4
@@ -60,6 +60,7 @@ dependencies:
   uuid: ^4.5.1
   lottie: ^3.1.2
   shared_preferences: ^2.5.4
+  open_filex: ^4.5.0
 
 dev_dependencies:
   flutter_test:
