--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   emoji_picker_flutter: ^4.4.0
   record: ^6.1.2
   audioplayers: ^6.5.1
+  audio_waveforms: ^1.1.2
   permission_handler: ^12.0.1
   text_scroll: ^0.2.1
   uuid: ^4.5.1
