--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   lottie: ^3.1.2
   shared_preferences: ^2.5.4
   open_filex: ^4.5.0
+  archive: ^3.4.9
 
 dev_dependencies:
   flutter_test:
